--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,28 @@ h1,h2,h3 {
 
 h1 {
     padding-top: 0;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
     border-bottom: 3px solid #ccc;
     color: #4aaaa5;
     text-align: left;
+}
+
+.container {
+    margin-top: 20px;
+}
+
+.media {
+    padding: 10px;
+}
+
+.row   {
+    padding: 20px;
+}
+
+.post-content {
+    background: none repeat scroll 0 0 #FFFFFF;
+    text-align-last: center;
+    opacity: 1;
+    margin: -50px 60px 50px; 
+    position: relative;
 }
